--- a/DellHack/views/login.html
+++ b/DellHack/views/login.html
@@ -7,6 +7,25 @@
 <body id="LoginForm">
 <div class="container">
     <div class="login-form">
+        <div class="main-div-2">
+            <div class="panel">
+                <h1>Welcome Back</h1>
+                <p>Registered Users Login</p>
+            </div>
+        <div>
+            <form id="login" method="POST" action='/registered'>
+                <div class="form-group">
+                    <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email Address">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+                </div>
+
+                <button type="submit" class="btn btn-primary">Login</button>
+
+            </form>
+        </div></div>
+
         <div class="main-div">
             <div class="panel">
                 <h1>Welcome</h1>
