pages link to each other. also added general documentation file

--- a/DellHack/views/welcome_portal.html
+++ b/DellHack/views/welcome_portal.html
@@ -15,12 +15,15 @@
                 -->
             </div>
             <div>
-                <a href="login.html">
+                <form action="login">
                     <button class="btn btn-primary">Login</button>
-                </a>
-                <a href="signup.html">
+                </form>
+    <!--            <a href="DellHack/views/login.html">
+                    <button class="btn btn-primary">Login2</button>
+                </a>-->
+                <form action="signup">
                     <button class="btn btn-primary">Sign Up</button>
-                </a>
+                </form>
             </div>
         </div>
     </div>
