--- a/DellHack/views/signup.html
+++ b/DellHack/views/signup.html
@@ -7,25 +7,32 @@
 <body id="LoginForm">
 <div class="container">
     <div class="login-form">
-        <div class="main-div-2">
+
+        <div class="main-div">
             <div class="panel">
-                <h1>Welcome Back</h1>
-                <p>Registered Users Login</p>
+                <h1>Welcome</h1>
+                <p>Please fill out this questionnaire</p>
             </div>
-            <div>
-                <form id="login" method="POST" action='/registered'>
-                    <div class="form-group">
-                        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email Address">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
-                    </div>
+            <form id="Survey" method="POST" action='/login'>
+                <div class="form-group">
+                    <input type="text" name="fname" class="form-control" id="inputFName" placeholder="First Name">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="lname" class="form-control" id="inputLName" placeholder="Last Name">
+                </div>
+                <div class="form-group">
+                    <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email Address">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+                </div>
 
-                    <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Login</button>
 
-                </form>
-            </div></div>
-    </div></div></div>
+            </form>
+        </div
+    </div>
+</div>
 
 
 </body>
