--- a/DellHack/views/signup.html
+++ b/DellHack/views/signup.html
@@ -30,7 +30,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
 
             </form>
-        </div
+        </div>
     </div>
 </div>
 
