adding login logic

--- a/DellHack/views/login.html
+++ b/DellHack/views/login.html
@@ -13,7 +13,7 @@
                 <p>Registered Users Login</p>
             </div>
             <div>
-                <form id="login" method="POST" action='/registered'>
+                <form id="login" method="POST" action='/login'>
                     <div class="form-group">
                         <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email Address">
                     </div>
