--- a/DellHack/views/welcome_portal.html
+++ b/DellHack/views/welcome_portal.html
@@ -15,13 +15,13 @@
                 -->
             </div>
             <div>
-                <form action="login">
+                <form action="/login">
                     <button class="btn btn-primary">Login</button>
                 </form>
     <!--            <a href="DellHack/views/login.html">
                     <button class="btn btn-primary">Login2</button>
                 </a>-->
-                <form action="signup">
+                <form action="/signup">
                     <button class="btn btn-primary">Sign Up</button>
                 </form>
             </div>
