--- a/DellHack/views/signup.html
+++ b/DellHack/views/signup.html
@@ -13,7 +13,7 @@
                 <h1>Welcome</h1>
                 <p>Please fill out this questionnaire</p>
             </div>
-            <form id="Survey" method="Get" action='/survey' >
+            <form id="Survey" method="POST" action='/signup' >
                 <div class="form-group">
                     <input type="text" name="fname" class="form-control" id="inputFName" placeholder="First Name">
                 </div>
