--- a/DellHack/views/survey.html
+++ b/DellHack/views/survey.html
@@ -30,14 +30,14 @@
                     <input type="radio" name="dessert" value="fruit"> fruit<br>
 
                     <a>What is your favorite exercise</a>
-                    <input type="radio" name="dessert" value="frozen"> aerobics<br>
-                    <input type="radio" name="dessert" value="baked_things"> weight lift<br>
-                    <input type="radio" name="dessert" value="fruit"> what do you mean? I don't!<br>
+                    <input type="radio" name="exercise" value="frozen"> aerobics<br>
+                    <input type="radio" name="exercise" value="baked_things"> weight lift<br>
+                    <input type="radio" name="exercise" value="fruit"> what do you mean? I don't!<br>
 
                     <a>What language do you have the most experience with</a>
-                    <input type="radio" name="dessert" value="frozen"> Java<br>
-                    <input type="radio" name="dessert" value="baked_things"> Python<br>
-                    <input type="radio" name="dessert" value="fruit"> C <br>
+                    <input type="radio" name="language" value="frozen"> Java<br>
+                    <input type="radio" name="language" value="baked_things"> Python<br>
+                    <input type="radio" name="language" value="fruit"> C <br>
                         
                     </div>
 
