--- a/DellHack/views/profile.html
+++ b/DellHack/views/profile.html
@@ -60,14 +60,19 @@
     </nav>
 
     <div class="container-fluid p-0">
-
+      <script type="text/javascript">
+          $(function() {
+              var x = JSON.parse($('responses.json').html());
+              let r = x.email; //Foo
+          });
+      </script>
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Clarence
             <span class="text-primary">Taylor</span>
           </h1>
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href=name@email.com>Email Me</a>  <!-- trying to pull email from json file to put on the person's profile page!-->
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <div class="social-icons">
